--- a/app.json
+++ b/app.json
@@ -25,7 +25,8 @@
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "themeColor": "#6633cc"
     }
   }
 }
