--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
+    "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
     "expo": "~38.0.1",
     "expo-camera": "~8.3.1",
     "expo-status-bar": "^1.0.0",
@@ -21,7 +23,8 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
