--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "HelloWorld",
+    "name": "Picturen",
     "slug": "picturen-frontend",
     "platforms": [
       "ios",
