--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "expo": "~38.0.1",
     "expo-camera": "~8.3.1",
+    "expo-speech": "~8.2.1",
     "expo-status-bar": "^1.0.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
