finish routes for user, and add drawer

--- a/app.json
+++ b/app.json
@@ -27,6 +27,12 @@
     "web": {
       "favicon": "./assets/favicon.png",
       "themeColor": "#6633cc"
+    },
+
+    "androidNavigationBar": {
+      "visible": true,
+      "barStyle": "light-content",
+      "backgroundColor": "#151728"
     }
   }
 }
